<resources>
    <string name="app_name">FragmentFlexible</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello ini home fragment lho</string>
    <string name="to_page_category">Yuk Ke Halaman category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_halaman_category">Ini halaman Category lho</string>
    <string name="kategory_lifestyle">Kategory Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_activity_page">Ke Halaman Activity</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="who_manager_of_the_year_premiere_league">Siapa manager of the year premiere league musim ini?</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="pep_guardiola">Pep Guardiola</string>
    <string name="antonio_conte">Antonio Conte</string>
    <string name="juergen_klopp">Juergen Klopp</string>
    <string name="arsene_wenger">Arsene Wenger</string>
    <string name="pilih">Pilih</string>
    <string name="tutup">Tutup</string>
</resources>
